unpackaged/main/default/objects/Fraccionamiento_Asociado__c/Fraccionamiento_Asociado__c.object-meta.xml
<CustomObject>
    <label>Fraccionamiento Asociado</label>
    <nameField>
        <displayFormat>FRACC-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraccionamients Asociados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>