unpackaged/main/default/objects/Fraccionamiento_Asociado__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fraccionamients Asociados</relationshipLabel>
    <relationshipName>Fraccionamients_Asociados</relationshipName>
    <type>Lookup</type>
</CustomField>