unpackaged/main/default/objects/Fraccionamiento_Asociado__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Fraccionamients Asociados</relationshipLabel>
    <relationshipName>Fraccionamients_Asociados</relationshipName>
    <type>Lookup</type>
</CustomField>