unpackaged/main/default/objects/Fraccionamiento_Asociado__c/fields/Fraccionamiento_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Asociado__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot;&amp;Id&amp;&quot;/view&quot;,   Name &amp; &quot; - &quot; &amp; Fraccionamiento__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento Asociado</label>
    <type>Text</type>
</CustomField>